--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="c-2">
       <ul>
         <li><a class="s-1" href="#">Login</a></li>
-        <li><a class="sign" href="#">Sign Up</a></li>
+        <li><a class="sign" href="signup.html">Sign Up</a></li>
       </ul>
     </div>
     </div>
