--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         </div>
       <ul class="list">
         <li><a href="About.html">About</a></li>
-        <li><a href="#">Testimonials</a></li>
-        <li><a href="#">Plans</a></li>
-        <li><a href="#">Our Broker</a></li>
+        <li><a href="testimonials">Testimonials</a></li>
+        <li><a href="plans">Plans</a></li>
+        <li><a href="Global">Our Broker</a></li>
       </ul>
     </div>
       <div class="c-2">
       <ul>
-        <li><a class="s-1" href="#">Login</a></li>
+        <li><a class="s-1" href="login.html">Login</a></li>
         <li><a class="sign" href="signup.html">Sign Up</a></li>
       </ul>
     </div>
